[FIX]Wrap X icon inside button tag for accesibility and semantics

--- a/littlelemon/src/index.css
+++ b/littlelemon/src/index.css
@@ -217,6 +217,13 @@ header li {
   color: var(--subtitle-color);
 }
 
+.openHamburgerMenu button{
+  background: none;
+  padding: 0;
+  margin: 0;
+  color: var(--secondary-color);
+}
+
 
 /* MAIN */
 main{
